--- a/index.html
+++ b/index.html
@@ -17,21 +17,33 @@
 <body>
 
   <div class="container">
-
     <div class="advice-box">
-      <span class="advice-tag">Advice #117</span>
-      <span class="advice-text">"It is easy to sit up and take notice, what's difficult is getting up and taking action."</span> 
+      <span class="advice-tag">Advice #<span id="advice-id">###</span></span>
+      <span class="advice-text-container">
+        <span id="advice-text"></span>
+      </span> 
       <img class="divider-desktop" src = "images/pattern-divider-desktop.svg" alt="My Happy SVG"/>
-      <div class="button">
+      <div class="button" onClick="getAdvice()">
         <img width="8px" height="8px" src="images/icon-dice.svg" alt="randomize icon"/>
       </div>
     </div>
   </div>
   
-  
-  <!-- <div class="attribution">
+  <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div> -->
+  </div>
 </body>
+
+<script src="https://www.w3schools.com/lib/w3.js"></script>
+<script>
+function getAdvice(){
+  w3.getHttpObject("https://api.adviceslip.com/advice", function(data){
+    data = data.slip;
+    document.getElementById("advice-id").innerHTML = data.id;
+    document.getElementById("advice-text").innerHTML = data.advice;
+  })
+}
+</script>
+
 </html>
