font size changes

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Vinícius Fernandes</a>.
+    Coded by <a href="https://github.com/volinha/">Vinícius Fernandes</a>.
   </div>
 </body>
 
